--- a/src/app/ng-pure-datatable/ng-paginate/ng-paginate.component.html
+++ b/src/app/ng-pure-datatable/ng-paginate/ng-paginate.component.html
@@ -1,5 +1,8 @@
-<nav aria-label="..." *ngIf="pages.length !== 0">
-  <ul class="pagination  justify-content-center">
+<nav aria-label="..." style="position: relative" *ngIf="pages.length !== 0">
+  <div class="showing">
+    Showing {{((data['current_page'] - 1) * (limit <= total ? limit : total) + 1)}} - {{(data['current_page']) * (limit <= total ? limit : total)}} of {{total}} entries
+  </div>
+  <ul *ngIf="limit <= data['total']" class="pagination  justify-content-end">
     <li class="page-item" [class.disabled]="data['prev_page_url'] === null" >
       <a class="page-link" (click)="loadData((prev_page + '&' + paginate + '='  + limit), prev_page)" role="button" tabindex="-1">Previous</a>
     </li>
