--- a/src/app/ng-pure-datatable/ng-pure-datatable.component.html
+++ b/src/app/ng-pure-datatable/ng-pure-datatable.component.html
@@ -1,11 +1,18 @@
 <div *ngIf="paginateSettings.data">
 
-    <div [ngStyle]="style">
+    <div class="limit-style" *ngIf="limitStyle && !disablePaging" [ngStyle]="limitStyle">
+      <!--<label for="limit">Limit: </label>-->
+      <select id="limit" [ngStyle]="setBorderColor()" [(ngModel)]="paginateSettings.limit"  (change)="updateLimit(+limit.value)" #limit>
+        <option value="" disabled selected>Select Limit</option>
+        <option *ngFor="let num of ranges" value="{{num}}">{{num}}</option>
+      </select>
+    </div>
+    <div class="search-app" *ngIf="!disableSearch" [ngStyle]="style">
       <ng-search [allSettings]="searchSettings"></ng-search>
       <div style="clear: both;"></div>
     </div>
 
-  <ng-paginate [from]="paginateSettings.from" [data]="paginateSettings.data"
+  <ng-paginate *ngIf="!disablePaging" [from]="paginateSettings.from" [data]="paginateSettings.data"
                [path]="paginateSettings.path"
                [limit]="paginateSettings.limit" [perNav]="paginateSettings.perNav"
                [viewPage]="paginateSettings.viewPage" [paginate]="paginateSettings.paginate"></ng-paginate>
